k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toard-app
  labels:
    app: toard-app
spec:
  type: ClusterIP
  selector:
    app: toard-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
